Refactor : using the entities package in hibernate and jdbc project