@@ -16,7 +16,10 @@
 package com.example;
 
 import com.example.repository.BookRepository;
-import com.example.repository.CategoryRepository;
+import io.micronaut.entities.Book;
+import io.micronaut.entities.Book_;
+import io.micronaut.entities.Category;
+import io.micronaut.entities.Category_;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.TypedQuery;
@@ -24,10 +27,9 @@ import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Join;
 import jakarta.persistence.criteria.Root;
-import jakarta.persistence.metamodel.EntityType;
-import jakarta.persistence.metamodel.SingularAttribute;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -37,38 +39,22 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 public class BookCriteriaMetamodelTest {
 
     final BookRepository bookRepository;
-    final CategoryRepository categoryRepository;
     final EntityManager entityManager;
 
     public BookCriteriaMetamodelTest(BookRepository bookRepository,
-                                     CategoryRepository categoryRepository,
                                      EntityManager entityManager) {
         this.bookRepository = bookRepository;
-        this.categoryRepository = categoryRepository;
         this.entityManager = entityManager;
     }
 
     @Test
     void canBuildCriteriaQueryUsingGeneratedStaticMetamodel_filterByTitle() {
-        Category fiction = new Category();
-        fiction.setId(1L);
-        fiction.setName("Fiction");
-        categoryRepository.save(fiction);
+        Category fiction = new Category(1L, "Fiction", new ArrayList<>(), new byte[]{});
 
-        Book b1 = new Book();
-        b1.setId(10L);
-        b1.setTitle("Dune");
-        b1.setPages(412);
-        b1.setCategory(fiction);
+        Book b1 = new Book(10L, "Dune", 412, fiction);
+        Book b2 = new Book(11L, "1984", 328, fiction);
 
-        Book b2 = new Book();
-        b2.setId(11L);
-        b2.setTitle("1984");
-        b2.setPages(328);
-        b2.setCategory(fiction);
-
-        bookRepository.save(b1);
-        bookRepository.save(b2);
+        bookRepository.saveAll(List.of(b1, b2));
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Book> cq = cb.createQuery(Book.class);
@@ -79,39 +65,20 @@ public class BookCriteriaMetamodelTest {
 
         List<Book> result = entityManager.createQuery(cq).getResultList();
         assertEquals(1, result.size());
-        assertEquals(10L, result.get(0).getId());
-        assertEquals("Dune", result.get(0).getTitle());
-        assertEquals(412, result.get(0).getPages());
+        assertEquals(10L, result.getFirst().getId());
+        assertEquals("Dune", result.getFirst().getTitle());
+        assertEquals(412, result.getFirst().getPages());
     }
 
     @Test
     void canBuildCriteriaQueryUsingGeneratedStaticMetamodel_filterByPagesRange_andOrderBy() {
-        Category fiction = new Category();
-        fiction.setId(2L);
-        fiction.setName("Fiction");
-        categoryRepository.save(fiction);
+        Category fiction = new Category(2L, "Fiction", new ArrayList<>(), new byte[]{});
 
-        Book b1 = new Book();
-        b1.setId(20L);
-        b1.setTitle("Short Book");
-        b1.setPages(120);
-        b1.setCategory(fiction);
+        Book b1 = new Book(20L, "Short Book", 120, fiction);
+        Book b2 = new Book(21L, "Medium Book", 250, fiction);
+        Book b3 = new Book(22L, "Long Book", 900, fiction);
 
-        Book b2 = new Book();
-        b2.setId(21L);
-        b2.setTitle("Medium Book");
-        b2.setPages(250);
-        b2.setCategory(fiction);
-
-        Book b3 = new Book();
-        b3.setId(22L);
-        b3.setTitle("Long Book");
-        b3.setPages(900);
-        b3.setCategory(fiction);
-
-        bookRepository.save(b1);
-        bookRepository.save(b2);
-        bookRepository.save(b3);
+        bookRepository.saveAll(List.of(b1, b2, b3));
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Book> cq = cb.createQuery(Book.class);
@@ -126,36 +93,19 @@ public class BookCriteriaMetamodelTest {
 
         List<Book> result = entityManager.createQuery(cq).getResultList();
         assertEquals(1, result.size());
-        assertEquals("Medium Book", result.get(0).getTitle());
-        assertEquals(250, result.get(0).getPages());
+        assertEquals("Medium Book", result.getFirst().getTitle());
+        assertEquals(250, result.getFirst().getPages());
     }
 
     @Test
     void canJoinManyToOneCategory_usingStaticMetamodel_andFilterOnCategoryName() {
-        Category fiction = new Category();
-        fiction.setId(3L);
-        fiction.setName("Fiction");
-        categoryRepository.save(fiction);
+        Category fiction = new Category(3L, "Fiction", new ArrayList<>(), new byte[]{});
+        Category nonFiction = new Category(4L, "Non-Fiction", new ArrayList<>(), new byte[]{});
 
-        Category nonFiction = new Category();
-        nonFiction.setId(4L);
-        nonFiction.setName("Non-Fiction");
-        categoryRepository.save(nonFiction);
+        Book b1 = new Book(30L, "Novel", 300, fiction);
+        Book b2 = new Book(31L, "Biography", 280, nonFiction);
 
-        Book b1 = new Book();
-        b1.setId(30L);
-        b1.setTitle("Novel");
-        b1.setPages(300);
-        b1.setCategory(fiction);
-
-        Book b2 = new Book();
-        b2.setId(31L);
-        b2.setTitle("Biography");
-        b2.setPages(280);
-        b2.setCategory(nonFiction);
-
-        bookRepository.save(b1);
-        bookRepository.save(b2);
+        bookRepository.saveAll(List.of(b1, b2));
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Book> cq = cb.createQuery(Book.class);
@@ -168,24 +118,17 @@ public class BookCriteriaMetamodelTest {
 
         List<Book> result = entityManager.createQuery(cq).getResultList();
         assertEquals(1, result.size());
-        assertEquals("Novel", result.get(0).getTitle());
-        assertEquals(300, result.get(0).getPages());
-        assertNotNull(result.get(0).getCategory());
-        assertEquals("Fiction", result.get(0).getCategory().getName());
+        assertEquals("Novel", result.getFirst().getTitle());
+        assertEquals(300, result.getFirst().getPages());
+        assertNotNull(result.getFirst().getCategory());
+        assertEquals("Fiction", result.getFirst().getCategory().getName());
     }
 
     @Test
     void canSelectScalarAttribute_usingStaticMetamodel() {
-        Category fiction = new Category();
-        fiction.setId(5L);
-        fiction.setName("Fiction");
-        categoryRepository.save(fiction);
+        Category fiction = new Category(5L, "Fiction", new ArrayList<>(), new byte[]{});
 
-        Book b1 = new Book();
-        b1.setId(40L);
-        b1.setTitle("Dune");
-        b1.setPages(412);
-        b1.setCategory(fiction);
+        Book b1 = new Book(40L, "Dune", 412, fiction);
 
         bookRepository.save(b1);
 
@@ -202,19 +145,14 @@ public class BookCriteriaMetamodelTest {
 
     @Test
     void canUsePaginationWithCriteriaQueryBuiltFromStaticMetamodel() {
-        Category fiction = new Category();
-        fiction.setId(6L);
-        fiction.setName("Fiction");
-        categoryRepository.save(fiction);
+        Category fiction = new Category(6L, "Fiction", new ArrayList<>(), new byte[]{});
 
-        for (long i = 1; i <= 5; i++) {
-            Book b = new Book();
-            b.setId(50L + i);
-            b.setTitle("Book " + i);
-            b.setPages((int) (100 + i));
-            b.setCategory(fiction);
-            bookRepository.save(b);
+        List<Book> books = new ArrayList<>();
+        for (int i = 1; i <= 5; i++) {
+            Book b = new Book(50L + i, "Book" + i, 100 + i, fiction);
+            books.add(b);
         }
+        bookRepository.saveAll(books);
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Book> cq = cb.createQuery(Book.class);
@@ -233,18 +171,4 @@ public class BookCriteriaMetamodelTest {
         assertEquals(53L, page.get(1).getId());
     }
 
-    @Test
-    void generatedMetamodelHasExpectedFields() throws Exception {
-        assertNotNull(Book_.class.getDeclaredField("id"));
-        assertNotNull(Book_.class.getDeclaredField("title"));
-        assertNotNull(Book_.class.getDeclaredField("pages"));
-        assertNotNull(Book_.class.getDeclaredField("category"));
-
-        assertEquals(SingularAttribute.class.getName(), Book_.class.getDeclaredField("id").getType().getName());
-        assertEquals(SingularAttribute.class.getName(), Book_.class.getDeclaredField("title").getType().getName());
-        assertEquals(SingularAttribute.class.getName(), Book_.class.getDeclaredField("pages").getType().getName());
-        assertEquals(SingularAttribute.class.getName(), Book_.class.getDeclaredField("category").getType().getName());
-
-        MetamodelAssertions.assertClassFieldIsEntityType(Book_.class, EntityType.class, Book.class);
-    }
 }
