@@ -16,19 +16,18 @@
 package com.example;
 
 import com.example.repository.ChildRepository;
+import io.micronaut.entities.Child;
+import io.micronaut.entities.Child_;
 import io.micronaut.test.extensions.junit5.annotation.MicronautTest;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Root;
-import jakarta.persistence.metamodel.EntityType;
-import jakarta.persistence.metamodel.MappedSuperclassType;
-import jakarta.persistence.metamodel.SingularAttribute;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @MicronautTest
 public class ChildCriteriaMetamodelInheritanceTest {
@@ -44,18 +43,10 @@ public class ChildCriteriaMetamodelInheritanceTest {
 
     @Test
     void canQueryByInheritedId_usingStaticMetamodel() {
-        Child c1 = new Child();
-        c1.setId(1L);
-        c1.setName("Alice");
-        c1.setAge(10L);
+        Child c1 = new Child(1L, "Alice", 10L);
+        Child c2 = new Child(2L, "Bob", 20L);
 
-        Child c2 = new Child();
-        c2.setId(2L);
-        c2.setName("Bob");
-        c2.setAge(20L);
-
-        childRepository.save(c1);
-        childRepository.save(c2);
+        childRepository.saveAll(List.of(c1, c2));
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Child> cq = cb.createQuery(Child.class);
@@ -67,25 +58,17 @@ public class ChildCriteriaMetamodelInheritanceTest {
         List<Child> result = entityManager.createQuery(cq).getResultList();
 
         assertEquals(1, result.size());
-        assertEquals(2L, result.get(0).getId());
-        assertEquals("Bob", result.get(0).getName());
-        assertEquals(20L, result.get(0).getAge());
+        assertEquals(2L, result.getFirst().getId());
+        assertEquals("Bob", result.getFirst().getName());
+        assertEquals(20L, result.getFirst().getAge());
     }
 
     @Test
     void canQueryByInheritedName_andDeclaredAge_usingStaticMetamodel() {
-        Child c1 = new Child();
-        c1.setId(3L);
-        c1.setName("Carol");
-        c1.setAge(30L);
+        Child c1 = new Child(3L, "Carol", 30L);
+        Child c2 = new Child(4L, "Carol", 5L);
 
-        Child c2 = new Child();
-        c2.setId(4L);
-        c2.setName("Carol");
-        c2.setAge(5L);
-
-        childRepository.save(c1);
-        childRepository.save(c2);
+        childRepository.saveAll(List.of(c1, c2));
 
         CriteriaBuilder cb = entityManager.getCriteriaBuilder();
         CriteriaQuery<Child> cq = cb.createQuery(Child.class);
@@ -101,40 +84,9 @@ public class ChildCriteriaMetamodelInheritanceTest {
         List<Child> result = entityManager.createQuery(cq).getResultList();
 
         assertEquals(1, result.size());
-        assertEquals(3L, result.get(0).getId());
-        assertEquals("Carol", result.get(0).getName());
-        assertEquals(30L, result.get(0).getAge());
+        assertEquals(3L, result.getFirst().getId());
+        assertEquals("Carol", result.getFirst().getName());
+        assertEquals(30L, result.getFirst().getAge());
     }
 
-    @Test
-    void generatedMetamodelHasExpectedFields_includingInheritedFromMappedSuperclass() throws Exception {
-
-        assertNotNull(Child_.class.getField("id"));
-        assertNotNull(Child_.class.getField("name"));
-        assertNotNull(Child_.class.getDeclaredField("age"));
-
-        assertEquals(SingularAttribute.class.getName(), Child_.class.getField("id").getType().getName());
-        assertEquals(SingularAttribute.class.getName(), Child_.class.getField("name").getType().getName());
-        assertEquals(SingularAttribute.class.getName(), Child_.class.getDeclaredField("age").getType().getName());
-
-        MetamodelAssertions.assertClassFieldIsEntityType(Child_.class, EntityType.class, Child.class);
-    }
-
-    @Test
-    void mappedSuperclassMetamodel_optional() throws Exception {
-        Class<?> parentMetamodel = Class.forName("com.example.Parent_");
-
-        assertNotNull(parentMetamodel.getDeclaredField("id"));
-        assertNotNull(parentMetamodel.getDeclaredField("name"));
-
-        assertEquals(SingularAttribute.class.getName(),
-            parentMetamodel.getDeclaredField("id").getType().getName());
-        assertEquals(SingularAttribute.class.getName(),
-            parentMetamodel.getDeclaredField("name").getType().getName());
-
-        assertThrows(NoSuchFieldException.class, () -> Parent_.class.getDeclaredField("age"));
-        MetamodelAssertions.assertClassFieldIsEntityType(Parent_.class, MappedSuperclassType.class, Parent.class);
-
-
-    }
 }
